# Strata

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMO_WALKTHROUGH.md  Dockerfile  Dockerfile.worker  FINAL_CLEANUP_REPORT.md  IMPROVEMENTS_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.sh  README.md  SECURITY_CHECK.md  SYSTEM_ARCHITECTURE.tex  demo.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start-demo.sh  test-everything.sh  test-python-bindings.py  validate.sh  verify-system.sh
.github/workflows/: ci.yml
benchmarks/: Cargo.toml
benchmarks/benches/: checkpoint_throughput.rs  coordinator.rs  data_loading.rs
config/: production.toml
crates/checkpoint/: Cargo.toml
crates/checkpoint/src/: lib.rs  manager.rs  writer.rs
crates/coordinator/: Cargo.toml  build.rs
crates/coordinator/src/: http_api.rs  lib.rs  middleware.rs  server.rs  service.rs
crates/data-shard/: Cargo.toml
crates/data-shard/benches/: consistent_hash.rs
crates/data-shard/src/: consistent_hash.rs  epoch.rs  lib.rs  shard_manager.rs
crates/python-bindings/: Cargo.toml
crates/python-bindings/src/: checkpoint.rs  dataset.rs  lib.rs  orchestrator.rs
crates/runtime-core/: Cargo.toml
crates/runtime-core/src/: config.rs  error.rs  lib.rs  runtime.rs  types.rs  worker.rs
crates/storage/: Cargo.toml
crates/storage/src/: backend.rs  lib.rs  local.rs  s3.rs
dashboard/: README.md  app.js  eslint.config.js  index.html  package-lock.json  package.json  serve.py  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: ActivityLog.tsx  BarrierStatus.tsx  CheckpointList.tsx  DataPreview.tsx  DatasetList.tsx  Header.tsx  MetricsCards.tsx  Sidebar.tsx  SystemLogs.tsx  TaskManager.tsx  ThroughputChart.tsx  WorkerList.tsx  index.ts
dashboard/src/lib/: api.ts  mockData.ts  utils.ts
dashboard/src/store/: index.ts
dashboard/src/test/: mockData.test.ts  setup.ts  utils.test.ts
dashboard/src/types/: index.ts
data/: .gitkeep
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  INTERVIEW_GUIDE.md
examples/: real_training.py  real_training_simple.py
proto/: coordinator.proto
python/dtruntime/: __init__.py
scripts/: real_worker.py  setup-aws.sh  simulated_worker.py  start_services.sh  stock_training_demo.py
tests/demos/: demo.py  distributed_task.py  test_training.py
tests/python/: conftest.py  test_checkpoint.py  test_dataset.py  test_distributed.py  test_e2e_training.py
tests/rust/: Cargo.toml
tests/rust/src/: lib.rs
tests/rust/tests/: e2e_training_simulation.rs  integration_test.rs
