[workspace]
resolver = "2"
members = [
    "crates/runtime-core",
    "crates/checkpoint",
    "crates/data-shard",
    "crates/storage",
    "crates/coordinator",
    "crates/python-bindings",
    "tests/rust",
    "benchmarks",
]


[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Portfolio Project"]
repository = "https://github.com/syrilj/Strata"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# gRPC
tonic = "0.12"
prost = "0.13"

# Python bindings
pyo3 = { version = "0.24.1", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }

# Storage
aws-sdk-s3 = "1.60"
aws-config = "1.5"

# HTTP API
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Utilities
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
parking_lot = "0.12"
bytes = "1.7"

# Testing
criterion = "0.5"
tempfile = "3.10"
portpicker = "0.1.1"
