[package]
name = "checkpoint"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
runtime-core = { path = "../runtime-core" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
