[package]
name = "coordinator"
version.workspace = true
edition.workspace = true

[dependencies]
runtime-core = { path = "../runtime-core" }
checkpoint = { path = "../checkpoint" }
data-shard = { path = "../data-shard" }
storage = { path = "../storage" }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# HTTP API
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }

# Security
regex = "1.10"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "coordinator"
path = "src/bin/coordinator.rs"
