[package]
name = "data-shard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Data sharding with consistent hashing and epoch coordination for distributed ML training"

[dependencies]
runtime-core = { path = "../runtime-core" }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true, features = ["serde"] }
parking_lot = { workspace = true }

# Fast hashing for consistent hash ring
fnv = "1.0"

# Random number generation for shuffling
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
criterion = { workspace = true }
tokio-test = "0.4"
serde_json = { workspace = true }

[[bench]]
name = "consistent_hash"
harness = false
