[package]
name = "dtruntime-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
# Internal crates
runtime-core = { path = "../runtime-core" }
checkpoint = { path = "../checkpoint" }
data-shard = { path = "../data-shard" }
storage = { path = "../storage" }
coordinator = { path = "../coordinator" }

# Python bindings
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }

# Async runtime
tokio = { workspace = true }

# gRPC
tonic = { workspace = true }

# Utilities
bytes = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
