[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pluggable storage backends for distributed ML training checkpoints and data"

[dependencies]
runtime-core = { path = "../runtime-core" }
tokio = { workspace = true }
bytes = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }
uuid = { workspace = true }

[features]
default = ["local"]
local = []
s3 = ["aws-sdk-s3", "aws-config"]

[dependencies.aws-sdk-s3]
workspace = true
optional = true

[dependencies.aws-config]
workspace = true
optional = true

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
