[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
runtime-core = { path = "../../crates/runtime-core" }
coordinator = { path = "../../crates/coordinator" }
checkpoint = { path = "../../crates/checkpoint" }
data-shard = { path = "../../crates/data-shard" }
storage = { path = "../../crates/storage" }
tokio = { version = "1.40", features = ["full", "test-util"] }
tempfile = "3.10"
uuid = { version = "1.10", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
portpicker = "0.1.1"
tonic.workspace = true
prost.workspace = true
chrono = { workspace = true }
